--- a/pom.xml
+++ b/pom.xml
@@ -6,20 +6,6 @@
     <groupId>jpa-basic</groupId>
     <artifactId>ex1-hello-jpa</artifactId>
     <version>1.0.0</version>
-    <!-- main method 실행 시 Error(release version 5 not supported) 발생함에 따라 설정 <build> 추가 -->
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
         <!-- JPA 하이버네이트(hibernate.org)
         1) 설정방법 : 라이브러리 버전을 설정할 때, (spring.io)사이트에서 참조하여
@@ -37,5 +23,19 @@
             <artifactId>h2</artifactId>
             <version>2.1.212</version>
         </dependency>
+
+        <!-- Error(Caused by: java.lang.ClassNotFoundException: javax.xml.bind.JAXBException) 발생함에 따라 추가 -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
+
+    <!-- Error에 따른 IDE 추천 JDK11 properties -->
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
 </project>
